--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,25 @@
+---
+
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Arsh Pathan | Portfolio</title>
 	</head>
 	<body>
-		<slot />
+		<div class="video-bg">
+			<video autoplay muted loop playsinline>
+				<source src="src/assets/background.webm" type="video/webm" />
+				Your browser does not support the video tag.
+			</video>
+		</div>
+
+		<main class="content">
+			<slot />
+		</main>
 	</body>
 </html>
 
@@ -18,5 +29,31 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		overflow: hidden;
+		background: #040015;
+	}
+
+	.video-bg {
+		position: fixed;
+		top: -21%;
+		right: -30%;
+		width: 120%;
+		height: 120%;
+		scale: 0.7;
+		transform: rotate(18deg);
+	}
+
+	.video-bg video {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: brightness(1);
+	}
+
+	.content {
+		position: relative;
+		z-index: 1;
+		color: white;
+		min-height: 100vh;
 	}
 </style>
