--- a/src/components/Certificates.astro
+++ b/src/components/Certificates.astro
@@ -13,7 +13,7 @@ const certificates = [
 ---
 
 <section id="certificates" class="section relative">
-    <div class="container">
+    <div class="container relative z-10">
         <h2 class="section-title">Certificates & Achievements</h2>
 
         <div class="certificates-grid">
